--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,6 +119,7 @@ name {
   -moz-transition: opacity .2s ease-in-out;
   -webkit-transition: opacity .2s ease-in-out;
   opacity: 0;
+  background-color: white;
 }
 
 .fade {
